CYKLO-823 - refactoring - generics